--- a/MaiInHerLoop/Resources/Scenarios/north_easy_1.json
+++ b/MaiInHerLoop/Resources/Scenarios/north_easy_1.json
@@ -14,10 +14,34 @@
       "text_vi": "Tầm nhìn bằng không khi khói dày đặc ngang tầm mắt. Sức nóng tăng dần. Hành động đầu tiên của [Name] là gì?",
       "timer": 15,
       "options": [
-        { "id": "q1_a", "text_en": "Crawl low beneath the smoke", "text_vi": "Bò thấp người dưới làn khói", "trait_tag": "risk_recognition", "next_question": "q2" },
-        { "id": "q1_b", "text_en": "Run toward the brightest light", "text_vi": "Chạy về phía ánh sáng mạnh nhất", "trait_tag": "immediate_action", "next_question": "q2" },
-        { "id": "q1_c", "text_en": "Cover face with a dry shirt", "text_vi": "Dùng áo khô che kín mặt", "trait_tag": "self_reliance", "next_question": "q2" },
-        { "id": "q1_d", "text_en": "Call the floor supervisor", "text_vi": "Gọi điện cho quản lý xưởng", "trait_tag": "information_first", "next_question": "q2" }
+        {
+          "id": "q1_a",
+          "text_en": "Crawl low beneath the smoke",
+          "text_vi": "Bò thấp người dưới làn khói",
+          "trait_tag": "risk_recognition",
+          "next_question": "q2"
+        },
+        {
+          "id": "q1_b",
+          "text_en": "Run toward the brightest light",
+          "text_vi": "Chạy về phía ánh sáng mạnh nhất",
+          "trait_tag": "immediate_action",
+          "next_question": "q2"
+        },
+        {
+          "id": "q1_c",
+          "text_en": "Cover face with a dry shirt",
+          "text_vi": "Dùng áo khô che kín mặt",
+          "trait_tag": "self_reliance",
+          "next_question": "q2"
+        },
+        {
+          "id": "q1_d",
+          "text_en": "Call the floor supervisor",
+          "text_vi": "Gọi điện cho quản lý xưởng",
+          "trait_tag": "information_first",
+          "next_question": "q2"
+        }
       ]
     },
     {
@@ -26,10 +50,34 @@
       "text_vi": "[Name] đến trước một cánh cửa kim loại nặng đang đóng. Khói len qua khe cửa. [Name] nên làm gì?",
       "timer": 15,
       "options": [
-        { "id": "q2_a", "text_en": "Feel the door with the back of hand", "text_vi": "Dùng mu bàn tay thử nhiệt độ cửa", "trait_tag": "risk_recognition", "next_question": "q3" },
-        { "id": "q2_b", "text_en": "Kick the door open immediately", "text_vi": "Đạp cửa xông ra ngay lập tức", "trait_tag": "immediate_action", "next_question": "q3" },
-        { "id": "q2_c", "text_en": "Shout for help through the door", "text_vi": "Hét lớn cầu cứu qua khe cửa", "trait_tag": "information_first", "next_question": "q3" },
-        { "id": "q2_d", "text_en": "Wait for a rescue team", "text_vi": "Đứng đợi đội cứu hộ đến", "trait_tag": "self_reliance", "next_question": "q3" }
+        {
+          "id": "q2_a",
+          "text_en": "Feel the door with the back of hand",
+          "text_vi": "Dùng mu bàn tay thử nhiệt độ cửa",
+          "trait_tag": "risk_recognition",
+          "next_question": "q3"
+        },
+        {
+          "id": "q2_b",
+          "text_en": "Kick the door open immediately",
+          "text_vi": "Đạp cửa xông ra ngay lập tức",
+          "trait_tag": "immediate_action",
+          "next_question": "q3"
+        },
+        {
+          "id": "q2_c",
+          "text_en": "Shout for help through the door",
+          "text_vi": "Hét lớn cầu cứu qua khe cửa",
+          "trait_tag": "information_first",
+          "next_question": "q3"
+        },
+        {
+          "id": "q2_d",
+          "text_en": "Wait for a rescue team",
+          "text_vi": "Đứng đợi đội cứu hộ đến",
+          "trait_tag": "self_reliance",
+          "next_question": "q3"
+        }
       ]
     },
     {
@@ -38,10 +86,34 @@
       "text_vi": "Cửa không nóng, nhưng hành lang dẫn ra hai lối: cầu thang bộ có khói nhẹ và thang máy.",
       "timer": 15,
       "options": [
-        { "id": "q3_a", "text_en": "Take the stairwell downward", "text_vi": "Đi xuống bằng cầu thang bộ", "trait_tag": "risk_recognition", "next_question": "q4a" },
-        { "id": "q3_b", "text_en": "Head toward the roof access", "text_vi": "Chạy lên phía sân thượng", "trait_tag": "self_reliance", "next_question": "q4b" },
-        { "id": "q3_c", "text_en": "Use the elevator for speed", "text_vi": "Dùng thang máy để thoát nhanh", "trait_tag": "immediate_action", "next_question": "q4a" },
-        { "id": "q3_d", "text_en": "Find a fire extinguisher first", "text_vi": "Tìm bình chữa cháy trước", "trait_tag": "information_first", "next_question": "q4b" }
+        {
+          "id": "q3_a",
+          "text_en": "Take the stairwell downward",
+          "text_vi": "Đi xuống bằng cầu thang bộ",
+          "trait_tag": "risk_recognition",
+          "next_question": "q4a"
+        },
+        {
+          "id": "q3_b",
+          "text_en": "Head toward the roof access",
+          "text_vi": "Chạy lên phía sân thượng",
+          "trait_tag": "self_reliance",
+          "next_question": "q4b"
+        },
+        {
+          "id": "q3_c",
+          "text_en": "Use the elevator for speed",
+          "text_vi": "Dùng thang máy để thoát nhanh",
+          "trait_tag": "immediate_action",
+          "next_question": "q4a"
+        },
+        {
+          "id": "q3_d",
+          "text_en": "Find a fire extinguisher first",
+          "text_vi": "Tìm bình chữa cháy trước",
+          "trait_tag": "information_first",
+          "next_question": "q4b"
+        }
       ]
     },
     {
@@ -50,10 +122,34 @@
       "text_vi": "Cầu thang đông nghịt. Có người ngã. Khói ngày càng đen và nồng khiến [Name] ho sặc sụa.",
       "timer": 15,
       "options": [
-        { "id": "q4a_a", "text_en": "Use a wet cloth over nose/mouth", "text_vi": "Dùng khăn ướt bịt mũi miệng", "trait_tag": "risk_recognition", "next_question": "q5" },
-        { "id": "q4a_b", "text_en": "Push through to reach the bottom", "text_vi": "Chen lấn để xuống tầng trệt", "trait_tag": "immediate_action", "next_question": "q5" },
-        { "id": "q4a_c", "text_en": "Help the person who fell", "text_vi": "Giúp người vừa bị ngã đứng dậy", "trait_tag": "self_reliance", "next_question": "q5" },
-        { "id": "q4a_d", "text_en": "Stop to call emergency 114", "text_vi": "Dừng lại gọi 114 báo vị trí", "trait_tag": "information_first", "next_question": "q5" }
+        {
+          "id": "q4a_a",
+          "text_en": "Use a wet cloth over nose/mouth",
+          "text_vi": "Dùng khăn ướt bịt mũi miệng",
+          "trait_tag": "risk_recognition",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4a_b",
+          "text_en": "Push through to reach the bottom",
+          "text_vi": "Chen lấn để xuống tầng trệt",
+          "trait_tag": "immediate_action",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4a_c",
+          "text_en": "Help the person who fell",
+          "text_vi": "Giúp người vừa bị ngã đứng dậy",
+          "trait_tag": "self_reliance",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4a_d",
+          "text_en": "Stop to call emergency 114",
+          "text_vi": "Dừng lại gọi 114 báo vị trí",
+          "trait_tag": "information_first",
+          "next_question": "q5"
+        }
       ]
     },
     {
@@ -62,10 +158,34 @@
       "text_vi": "Cửa thượng tầng bị khóa. [Name] kẹt ở tầng cao nhất. Khói bốc lên rất nhanh qua các lỗ thông hơi.",
       "timer": 12,
       "options": [
-        { "id": "q4b_a", "text_en": "Find a room and seal the door", "text_vi": "Tìm một phòng và chặn kín khe cửa", "trait_tag": "risk_recognition", "next_question": "q5" },
-        { "id": "q4b_b", "text_en": "Break a window to signal rescuers", "text_vi": "Phá cửa sổ để ra hiệu cứu hộ", "trait_tag": "immediate_action", "next_question": "q5" },
-        { "id": "q4b_c", "text_en": "Try to force the roof door open", "text_vi": "Cố gắng phá khóa cửa sân thượng", "trait_tag": "self_reliance", "next_question": "q5" },
-        { "id": "q4b_d", "text_en": "Wave a bright shirt out the window", "text_vi": "Vẫy áo sáng màu qua cửa sổ", "trait_tag": "information_first", "next_question": "q5" }
+        {
+          "id": "q4b_a",
+          "text_en": "Find a room and seal the door",
+          "text_vi": "Tìm một phòng và chặn kín khe cửa",
+          "trait_tag": "risk_recognition",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4b_b",
+          "text_en": "Break a window to signal rescuers",
+          "text_vi": "Phá cửa sổ để ra hiệu cứu hộ",
+          "trait_tag": "immediate_action",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4b_c",
+          "text_en": "Try to force the roof door open",
+          "text_vi": "Cố gắng phá khóa cửa sân thượng",
+          "trait_tag": "self_reliance",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4b_d",
+          "text_en": "Wave a bright shirt out the window",
+          "text_vi": "Vẫy áo sáng màu qua cửa sổ",
+          "trait_tag": "information_first",
+          "next_question": "q5"
+        }
       ]
     },
     {
@@ -74,10 +194,34 @@
       "text_vi": "Cứu hỏa đã đến. Kết cấu tòa nhà đang yếu dần. [Name] nghe tiếng nứt lớn từ trần nhà phía trên.",
       "timer": 15,
       "options": [
-        { "id": "q5_a", "text_en": "Move away from the central span", "text_vi": "Di chuyển khỏi khu vực giữa sàn", "trait_tag": "risk_recognition", "next_question": "q6" },
-        { "id": "q5_b", "text_en": "Run toward the flashing lights", "text_vi": "Chạy về phía có ánh đèn nháy", "trait_tag": "immediate_action", "next_question": "q6" },
-        { "id": "q5_c", "text_en": "Stay near a load-bearing pillar", "text_vi": "Đứng gần các cột trụ chịu lực", "trait_tag": "self_reliance", "next_question": "q6" },
-        { "id": "q5_d", "text_en": "Listen for firefighter instructions", "text_vi": "Lắng nghe chỉ dẫn của lính cứu hỏa", "trait_tag": "information_first", "next_question": "q6" }
+        {
+          "id": "q5_a",
+          "text_en": "Move away from the central span",
+          "text_vi": "Di chuyển khỏi khu vực giữa sàn",
+          "trait_tag": "risk_recognition",
+          "next_question": "q6"
+        },
+        {
+          "id": "q5_b",
+          "text_en": "Run toward the flashing lights",
+          "text_vi": "Chạy về phía có ánh đèn nháy",
+          "trait_tag": "immediate_action",
+          "next_question": "q6"
+        },
+        {
+          "id": "q5_c",
+          "text_en": "Stay near a load-bearing pillar",
+          "text_vi": "Đứng gần các cột trụ chịu lực",
+          "trait_tag": "self_reliance",
+          "next_question": "q6"
+        },
+        {
+          "id": "q5_d",
+          "text_en": "Listen for firefighter instructions",
+          "text_vi": "Lắng nghe chỉ dẫn của lính cứu hỏa",
+          "trait_tag": "information_first",
+          "next_question": "q6"
+        }
       ]
     },
     {
@@ -86,8 +230,34 @@
       "text_vi": "[Name] thấy thang cứu hỏa vươn tới cửa sổ. Nhiều công nhân đang hoảng loạn ùa về phía đó.",
       "timer": 15,
       "options": [
-        { "id": "q6_a", "text_en": "Wait for the crowd to settle", "text_vi": "Đợi đám đông ổn định lại", "trait_tag": "risk_recognition", "next_question": "q7a" },
-        { "id": "q6_b", "text_en": "Push to be the next one out", "text_vi": "Chen lên để được ra ngoài tiếp theo", "trait_tag": "immediate_action", "next_question": "q7b" }
+        {
+          "id": "q6_a",
+          "text_en": "Wait for the crowd to settle",
+          "text_vi": "Đợi đám đông ổn định lại",
+          "trait_tag": "risk_recognition",
+          "next_question": "q7a"
+        },
+        {
+          "id": "q6_b",
+          "text_en": "Push to be the next one out",
+          "text_vi": "Chen lên để được ra ngoài tiếp theo",
+          "trait_tag": "immediate_action",
+          "next_question": "q7b"
+        },
+        {
+          "id": "q6_c",
+          "text_en": "Help others reach the ladder safely",
+          "text_vi": "Giúp người khác tiếp cận thang an toàn",
+          "trait_tag": "self_reliance",
+          "next_question": "q7a"
+        },
+        {
+          "id": "q6_d",
+          "text_en": "Shout your floor number to firefighters",
+          "text_vi": "Hét số tầng cho lính cứu hỏa biết",
+          "trait_tag": "information_first",
+          "next_question": "q7b"
+        }
       ]
     },
     {
@@ -96,10 +266,34 @@
       "text_vi": "[Name] thoát ra an toàn và được thở oxy. Nhà máy bị hủy hoại, nhưng quy trình an toàn đã cứu sống hàng chục người.",
       "timer": 20,
       "options": [
-        { "id": "q7a_a", "text_en": "Give a statement to the fire chief", "text_vi": "Cung cấp lời khai cho chỉ huy cứu hỏa", "trait_tag": "risk_recognition", "next_question": null },
-        { "id": "q7a_b", "text_en": "Check on co-workers at the triage", "text_vi": "Kiểm tra đồng nghiệp tại khu sơ cứu", "trait_tag": "immediate_action", "next_question": null },
-        { "id": "q7a_c", "text_en": "Share the news with family", "text_vi": "Báo tin an toàn cho gia đình", "trait_tag": "information_first", "next_question": null },
-        { "id": "q7a_d", "text_en": "Rest and monitor for smoke inhalation", "text_vi": "Nghỉ ngơi và theo dõi hô hấp", "trait_tag": "self_reliance", "next_question": null }
+        {
+          "id": "q7a_a",
+          "text_en": "Give a statement to the fire chief",
+          "text_vi": "Cung cấp lời khai cho chỉ huy cứu hỏa",
+          "trait_tag": "risk_recognition",
+          "next_question": null
+        },
+        {
+          "id": "q7a_b",
+          "text_en": "Check on co-workers at the triage",
+          "text_vi": "Kiểm tra đồng nghiệp tại khu sơ cứu",
+          "trait_tag": "immediate_action",
+          "next_question": null
+        },
+        {
+          "id": "q7a_c",
+          "text_en": "Share the news with family",
+          "text_vi": "Báo tin an toàn cho gia đình",
+          "trait_tag": "information_first",
+          "next_question": null
+        },
+        {
+          "id": "q7a_d",
+          "text_en": "Rest and monitor for smoke inhalation",
+          "text_vi": "Nghỉ ngơi và theo dõi hô hấp",
+          "trait_tag": "self_reliance",
+          "next_question": null
+        }
       ]
     },
     {
@@ -108,10 +302,34 @@
       "text_vi": "[Name] thoát được nhưng bị bỏng nhẹ do chen lấn. Sự hỗn loạn bên ngoài bao trùm cùng tiếng còi hú.",
       "timer": 20,
       "options": [
-        { "id": "q7b_a", "text_en": "Seek immediate burn treatment", "text_vi": "Tìm người sơ cứu vết bỏng ngay", "trait_tag": "immediate_action", "next_question": null },
-        { "id": "q7b_b", "text_en": "Sit down to recover from shock", "text_vi": "Ngồi xuống để hồi phục sau cú sốc", "trait_tag": "self_reliance", "next_question": null },
-        { "id": "q7b_c", "text_en": "Ask where the assembly point is", "text_vi": "Hỏi vị trí điểm tập kết ở đâu", "trait_tag": "information_first", "next_question": null },
-        { "id": "q7b_d", "text_en": "Look for missing personal items", "text_vi": "Tìm kiếm đồ đạc cá nhân bị rơi", "trait_tag": "risk_recognition", "next_question": null }
+        {
+          "id": "q7b_a",
+          "text_en": "Seek immediate burn treatment",
+          "text_vi": "Tìm người sơ cứu vết bỏng ngay",
+          "trait_tag": "immediate_action",
+          "next_question": null
+        },
+        {
+          "id": "q7b_b",
+          "text_en": "Sit down to recover from shock",
+          "text_vi": "Ngồi xuống để hồi phục sau cú sốc",
+          "trait_tag": "self_reliance",
+          "next_question": null
+        },
+        {
+          "id": "q7b_c",
+          "text_en": "Ask where the assembly point is",
+          "text_vi": "Hỏi vị trí điểm tập kết ở đâu",
+          "trait_tag": "information_first",
+          "next_question": null
+        },
+        {
+          "id": "q7b_d",
+          "text_en": "Look for missing personal items",
+          "text_vi": "Tìm kiếm đồ đạc cá nhân bị rơi",
+          "trait_tag": "risk_recognition",
+          "next_question": null
+        }
       ]
     }
   ],
