--- a/MaiInHerLoop/Resources/Scenarios/north_easy_2.json
+++ b/MaiInHerLoop/Resources/Scenarios/north_easy_2.json
@@ -14,10 +14,34 @@
       "text_vi": "Nước đổ xuống mặt đường cách 50m phía trước. Đường phía sau rất hẹp và dốc. Phản ứng tức thì của [Name] là gì?",
       "timer": 15,
       "options": [
-        { "id": "q1_a", "text_en": "Abandon the bike and climb up", "text_vi": "Bỏ xe và leo lên phía sườn cao", "trait_tag": "risk_recognition", "next_question": "q2" },
-        { "id": "q1_b", "text_en": "U-turn and ride away fast", "text_vi": "Quay xe và chạy thật nhanh", "trait_tag": "immediate_action", "next_question": "q2" },
-        { "id": "q1_c", "text_en": "Stop and wait near a large rock", "text_vi": "Dừng lại chờ gần tảng đá lớn", "trait_tag": "self_reliance", "next_question": "q2" },
-        { "id": "q1_d", "text_en": "Honk to warn other riders", "text_vi": "Bấm còi cảnh báo người khác", "trait_tag": "information_first", "next_question": "q2" }
+        {
+          "id": "q1_a",
+          "text_en": "Abandon the bike and climb up",
+          "text_vi": "Bỏ xe và leo lên phía sườn cao",
+          "trait_tag": "risk_recognition",
+          "next_question": "q2"
+        },
+        {
+          "id": "q1_b",
+          "text_en": "U-turn and ride away fast",
+          "text_vi": "Quay xe và chạy thật nhanh",
+          "trait_tag": "immediate_action",
+          "next_question": "q2"
+        },
+        {
+          "id": "q1_c",
+          "text_en": "Stop and wait near a large rock",
+          "text_vi": "Dừng lại chờ gần tảng đá lớn",
+          "trait_tag": "self_reliance",
+          "next_question": "q2"
+        },
+        {
+          "id": "q1_d",
+          "text_en": "Honk to warn other riders",
+          "text_vi": "Bấm còi cảnh báo người khác",
+          "trait_tag": "information_first",
+          "next_question": "q2"
+        }
       ]
     },
     {
@@ -26,10 +50,34 @@
       "text_vi": "Bùn bắt đầu trượt dưới chân [Name]. Mặt đường bắt đầu sạt xuống thung lũng. Tiếng gầm rú giờ đây rung chuyển cả mặt đất.",
       "timer": 15,
       "options": [
-        { "id": "q2_a", "text_en": "Grab onto sturdy tree roots", "text_vi": "Bám chặt vào rễ cây cổ thụ", "trait_tag": "risk_recognition", "next_question": "q3" },
-        { "id": "q2_b", "text_en": "Run toward a high concrete bridge", "text_vi": "Chạy về phía cây cầu bê tông cao", "trait_tag": "immediate_action", "next_question": "q3" },
-        { "id": "q2_c", "text_en": "Stay in the middle of the road", "text_vi": "Giữ vị trí ở giữa mặt đường", "trait_tag": "self_reliance", "next_question": "q3" },
-        { "id": "q2_d", "text_en": "Look for a shallow cave", "text_vi": "Tìm kiếm một hang đá nông", "trait_tag": "information_first", "next_question": "q3" }
+        {
+          "id": "q2_a",
+          "text_en": "Grab onto sturdy tree roots",
+          "text_vi": "Bám chặt vào rễ cây cổ thụ",
+          "trait_tag": "risk_recognition",
+          "next_question": "q3"
+        },
+        {
+          "id": "q2_b",
+          "text_en": "Run toward a high concrete bridge",
+          "text_vi": "Chạy về phía cây cầu bê tông cao",
+          "trait_tag": "immediate_action",
+          "next_question": "q3"
+        },
+        {
+          "id": "q2_c",
+          "text_en": "Stay in the middle of the road",
+          "text_vi": "Giữ vị trí ở giữa mặt đường",
+          "trait_tag": "self_reliance",
+          "next_question": "q3"
+        },
+        {
+          "id": "q2_d",
+          "text_en": "Look for a shallow cave",
+          "text_vi": "Tìm kiếm một hang đá nông",
+          "trait_tag": "information_first",
+          "next_question": "q3"
+        }
       ]
     },
     {
@@ -38,10 +86,34 @@
       "text_vi": "Nước tràn ngập mặt đường. [Name] thấy hai lối lên cao: một sườn đất dốc hoặc một mỏm đá.",
       "timer": 15,
       "options": [
-        { "id": "q3_a", "text_en": "Scramble up the rocky ridge", "text_vi": "Trèo lên mỏm đá phía trên", "trait_tag": "risk_recognition", "next_question": "q4a" },
-        { "id": "q3_b", "text_en": "Climb the dirt slope quickly", "text_vi": "Leo lên sườn đất thật nhanh", "trait_tag": "self_reliance", "next_question": "q4b" },
-        { "id": "q3_c", "text_en": "Wade through to find a house", "text_vi": "Lội qua nước tìm nhà dân", "trait_tag": "immediate_action", "next_question": "q4a" },
-        { "id": "q3_d", "text_en": "Call for help on the phone", "text_vi": "Gọi điện thoại cầu cứu", "trait_tag": "information_first", "next_question": "q4b" }
+        {
+          "id": "q3_a",
+          "text_en": "Scramble up the rocky ridge",
+          "text_vi": "Trèo lên mỏm đá phía trên",
+          "trait_tag": "risk_recognition",
+          "next_question": "q4a"
+        },
+        {
+          "id": "q3_b",
+          "text_en": "Climb the dirt slope quickly",
+          "text_vi": "Leo lên sườn đất thật nhanh",
+          "trait_tag": "self_reliance",
+          "next_question": "q4b"
+        },
+        {
+          "id": "q3_c",
+          "text_en": "Wade through to find a house",
+          "text_vi": "Lội qua nước tìm nhà dân",
+          "trait_tag": "immediate_action",
+          "next_question": "q4a"
+        },
+        {
+          "id": "q3_d",
+          "text_en": "Call for help on the phone",
+          "text_vi": "Gọi điện thoại cầu cứu",
+          "trait_tag": "information_first",
+          "next_question": "q4b"
+        }
       ]
     },
     {
@@ -50,10 +122,34 @@
       "text_vi": "[Name] lên được mỏm đá. Nhìn xuống, chiếc xe bị cuốn trôi như đồ chơi. Mưa lớn khiến đá rất trơn.",
       "timer": 15,
       "options": [
-        { "id": "q4a_a", "text_en": "Stay low and hold the rock", "text_vi": "Hạ thấp trọng tâm, bám sát đá", "trait_tag": "risk_recognition", "next_question": "q5" },
-        { "id": "q4a_b", "text_en": "Try to signal passing vehicles", "text_vi": "Cố ra hiệu cho các xe đi ngang", "trait_tag": "information_first", "next_question": "q5" },
-        { "id": "q4a_c", "text_en": "Move higher up the mountain", "text_vi": "Tiếp tục leo cao lên núi", "trait_tag": "immediate_action", "next_question": "q5" },
-        { "id": "q4a_d", "text_en": "Check for injuries on limbs", "text_vi": "Kiểm tra vết thương trên cơ thể", "trait_tag": "self_reliance", "next_question": "q5" }
+        {
+          "id": "q4a_a",
+          "text_en": "Stay low and hold the rock",
+          "text_vi": "Hạ thấp trọng tâm, bám sát đá",
+          "trait_tag": "risk_recognition",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4a_b",
+          "text_en": "Try to signal passing vehicles",
+          "text_vi": "Cố ra hiệu cho các xe đi ngang",
+          "trait_tag": "information_first",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4a_c",
+          "text_en": "Move higher up the mountain",
+          "text_vi": "Tiếp tục leo cao lên núi",
+          "trait_tag": "immediate_action",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4a_d",
+          "text_en": "Check for injuries on limbs",
+          "text_vi": "Kiểm tra vết thương trên cơ thể",
+          "trait_tag": "self_reliance",
+          "next_question": "q5"
+        }
       ]
     },
     {
@@ -62,10 +158,34 @@
       "text_vi": "Sườn đất không ổn định. Đá nhỏ rơi lả tả khi [Name] leo. Bên dưới, mặt đường đã biến mất hoàn toàn.",
       "timer": 12,
       "options": [
-        { "id": "q4b_a", "text_en": "Dig fingers deep for grip", "text_vi": "Bám ngón tay sâu vào đất", "trait_tag": "self_reliance", "next_question": "q5" },
-        { "id": "q4b_b", "text_en": "Look for a horizontal ledge", "text_vi": "Tìm kiếm một gờ đá nằm ngang", "trait_tag": "risk_recognition", "next_question": "q5" },
-        { "id": "q4b_c", "text_en": "Shout at the top of lungs", "text_vi": "Hét thật to kêu cứu", "trait_tag": "immediate_action", "next_question": "q5" },
-        { "id": "q4b_d", "text_en": "Check phone GPS signal", "text_vi": "Kiểm tra tín hiệu GPS điện thoại", "trait_tag": "information_first", "next_question": "q5" }
+        {
+          "id": "q4b_a",
+          "text_en": "Dig fingers deep for grip",
+          "text_vi": "Bám ngón tay sâu vào đất",
+          "trait_tag": "self_reliance",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4b_b",
+          "text_en": "Look for a horizontal ledge",
+          "text_vi": "Tìm kiếm một gờ đá nằm ngang",
+          "trait_tag": "risk_recognition",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4b_c",
+          "text_en": "Shout at the top of lungs",
+          "text_vi": "Hét thật to kêu cứu",
+          "trait_tag": "immediate_action",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4b_d",
+          "text_en": "Check phone GPS signal",
+          "text_vi": "Kiểm tra tín hiệu GPS điện thoại",
+          "trait_tag": "information_first",
+          "next_question": "q5"
+        }
       ]
     },
     {
@@ -74,10 +194,34 @@
       "text_vi": "Mưa tạnh nhưng núi rừng đang rung chuyển. [Name] nghe tiếng nứt vỡ. Một vụ sạt lở khác sắp xảy ra.",
       "timer": 15,
       "options": [
-        { "id": "q5_a", "text_en": "Watch the tilt of trees", "text_vi": "Quan sát độ nghiêng của cây", "trait_tag": "risk_recognition", "next_question": "q6" },
-        { "id": "q5_b", "text_en": "Run across the slope fast", "text_vi": "Chạy thật nhanh băng qua sườn", "trait_tag": "immediate_action", "next_question": "q6" },
-        { "id": "q5_c", "text_en": "Stay still and listen closely", "text_vi": "Giữ im lặng và lắng nghe kỹ", "trait_tag": "information_first", "next_question": "q6" },
-        { "id": "q5_d", "text_en": "Put on a helmet for protection", "text_vi": "Đội mũ bảo hiểm để bảo vệ đầu", "trait_tag": "self_reliance", "next_question": "q6" }
+        {
+          "id": "q5_a",
+          "text_en": "Watch the tilt of trees",
+          "text_vi": "Quan sát độ nghiêng của cây",
+          "trait_tag": "risk_recognition",
+          "next_question": "q6"
+        },
+        {
+          "id": "q5_b",
+          "text_en": "Run across the slope fast",
+          "text_vi": "Chạy thật nhanh băng qua sườn",
+          "trait_tag": "immediate_action",
+          "next_question": "q6"
+        },
+        {
+          "id": "q5_c",
+          "text_en": "Stay still and listen closely",
+          "text_vi": "Giữ im lặng và lắng nghe kỹ",
+          "trait_tag": "information_first",
+          "next_question": "q6"
+        },
+        {
+          "id": "q5_d",
+          "text_en": "Put on a helmet for protection",
+          "text_vi": "Đội mũ bảo hiểm để bảo vệ đầu",
+          "trait_tag": "self_reliance",
+          "next_question": "q6"
+        }
       ]
     },
     {
@@ -86,8 +230,34 @@
       "text_vi": "Đội cứu hộ xuất hiện với đèn pin phía trên. Họ thả dây xuống. Mặt đất đang rung nhẹ.",
       "timer": 15,
       "options": [
-        { "id": "q6_a", "text_en": "Secure the rope around waist", "text_vi": "Buộc dây chắc chắn quanh eo", "trait_tag": "risk_recognition", "next_question": "q7a" },
-        { "id": "q6_b", "text_en": "Climb up using only hands", "text_vi": "Chỉ dùng tay không leo lên", "trait_tag": "immediate_action", "next_question": "q7b" }
+        {
+          "id": "q6_a",
+          "text_en": "Secure the rope around your waist",
+          "text_vi": "Buộc dây chắc chắn quanh eo",
+          "trait_tag": "risk_recognition",
+          "next_question": "q7a"
+        },
+        {
+          "id": "q6_b",
+          "text_en": "Climb up using only your hands",
+          "text_vi": "Chỉ dùng tay không leo lên",
+          "trait_tag": "immediate_action",
+          "next_question": "q7b"
+        },
+        {
+          "id": "q6_c",
+          "text_en": "Ask rescuers which path is safest",
+          "text_vi": "Hỏi cứu hộ đường nào an toàn nhất",
+          "trait_tag": "information_first",
+          "next_question": "q7a"
+        },
+        {
+          "id": "q6_d",
+          "text_en": "Anchor the rope to a tree first",
+          "text_vi": "Buộc dây vào gốc cây trước đã",
+          "trait_tag": "self_reliance",
+          "next_question": "q7b"
+        }
       ]
     },
     {
@@ -96,10 +266,34 @@
       "text_vi": "[Name] được kéo lên an toàn. Phía dưới, cả sườn đồi sụp đổ. [Name] an toàn nhưng vẫn bàng hoàng.",
       "timer": 20,
       "options": [
-        { "id": "q7a_a", "text_en": "Follow team to local shelter", "text_vi": "Theo đội về trạm trú ẩn", "trait_tag": "risk_recognition", "next_question": null },
-        { "id": "q7a_b", "text_en": "Notify family of the location", "text_vi": "Báo vị trí hiện tại cho người thân", "trait_tag": "information_first", "next_question": null },
-        { "id": "q7a_c", "text_en": "Help other survivors found", "text_vi": "Giúp đỡ những người sống sót khác", "trait_tag": "immediate_action", "next_question": null },
-        { "id": "q7a_d", "text_en": "Keep warm with blankets provided", "text_vi": "Quấn chăn giữ ấm cơ thể", "trait_tag": "self_reliance", "next_question": null }
+        {
+          "id": "q7a_a",
+          "text_en": "Follow team to local shelter",
+          "text_vi": "Theo đội về trạm trú ẩn",
+          "trait_tag": "risk_recognition",
+          "next_question": null
+        },
+        {
+          "id": "q7a_b",
+          "text_en": "Notify family of the location",
+          "text_vi": "Báo vị trí hiện tại cho người thân",
+          "trait_tag": "information_first",
+          "next_question": null
+        },
+        {
+          "id": "q7a_c",
+          "text_en": "Help other survivors found",
+          "text_vi": "Giúp đỡ những người sống sót khác",
+          "trait_tag": "immediate_action",
+          "next_question": null
+        },
+        {
+          "id": "q7a_d",
+          "text_en": "Keep warm with blankets provided",
+          "text_vi": "Quấn chăn giữ ấm cơ thể",
+          "trait_tag": "self_reliance",
+          "next_question": null
+        }
       ]
     },
     {
@@ -108,10 +302,34 @@
       "text_vi": "[Name] lên tới đỉnh ngay khi gờ đá sụp. Cứu hộ kịp kéo [Name] lại. Mạng sống thật quý giá.",
       "timer": 20,
       "options": [
-        { "id": "q7b_a", "text_en": "Get a medical checkup immediately", "text_vi": "Kiểm tra y tế ngay lập tức", "trait_tag": "immediate_action", "next_question": null },
-        { "id": "q7b_b", "text_en": "Avoid mountain roads during rain", "text_vi": "Tránh đường đèo khi trời mưa", "trait_tag": "risk_recognition", "next_question": null },
-        { "id": "q7b_c", "text_en": "Volunteer for flood awareness", "text_vi": "Tham gia tuyên truyền về lũ quét", "trait_tag": "information_first", "next_question": null },
-        { "id": "q7b_d", "text_en": "Donate to local rescue teams", "text_vi": "Ủng hộ cho các đội cứu hộ", "trait_tag": "self_reliance", "next_question": null }
+        {
+          "id": "q7b_a",
+          "text_en": "Get a medical checkup immediately",
+          "text_vi": "Kiểm tra y tế ngay lập tức",
+          "trait_tag": "immediate_action",
+          "next_question": null
+        },
+        {
+          "id": "q7b_b",
+          "text_en": "Avoid mountain roads during rain",
+          "text_vi": "Tránh đường đèo khi trời mưa",
+          "trait_tag": "risk_recognition",
+          "next_question": null
+        },
+        {
+          "id": "q7b_c",
+          "text_en": "Volunteer for flood awareness",
+          "text_vi": "Tham gia tuyên truyền về lũ quét",
+          "trait_tag": "information_first",
+          "next_question": null
+        },
+        {
+          "id": "q7b_d",
+          "text_en": "Donate to local rescue teams",
+          "text_vi": "Ủng hộ cho các đội cứu hộ",
+          "trait_tag": "self_reliance",
+          "next_question": null
+        }
       ]
     }
   ],
