--- a/MaiInHerLoop/Resources/Scenarios/north_easy_5.json
+++ b/MaiInHerLoop/Resources/Scenarios/north_easy_5.json
@@ -10,26 +10,74 @@
   "questions": [
     {
       "id": "q1",
-      "text_en": "The 'Boss' asks [Name] to transfer 50 million VND to a partner's account immediately to secure a contract. They promise to repay by evening.",
-      "text_vi": "Sếp nhờ [Name] chuyển gấp 50 triệu cho đối tác để giữ hợp đồng. Họ hứa sẽ trả lại ngay trong chiều nay.",
+      "text_en": "The 'Boss' asks [Name] to transfer 50 million VND to a partner's account to secure a contract. They promise to repay by evening.",
+      "text_vi": "'Sếp' nhờ [Name] chuyển gấp 50 triệu cho đối tác để giữ hợp đồng. Họ hứa sẽ trả lại ngay trong chiều nay.",
       "timer": 15,
       "options": [
-        { "id": "q1_a", "text_en": "Transfer money to show loyalty", "text_vi": "Chuyển tiền để thể hiện sự tận tụy", "trait_tag": "self_reliance", "next_question": "q2" },
-        { "id": "q1_b", "text_en": "Ask for an official voice note", "text_vi": "Yêu cầu sếp gửi tin nhắn thoại", "trait_tag": "information_first", "next_question": "q2" },
-        { "id": "q1_c", "text_en": "Call the boss's old phone number", "text_vi": "Gọi vào số điện thoại cũ của sếp", "trait_tag": "risk_recognition", "next_question": "q2" },
-        { "id": "q1_d", "text_en": "Contact the office accountant first", "text_vi": "Liên hệ với kế toán công ty trước", "trait_tag": "immediate_action", "next_question": "q2" }
+        {
+          "id": "q1_a",
+          "text_en": "Transfer money to show loyalty",
+          "text_vi": "Chuyển tiền để thể hiện sự tận tụy",
+          "trait_tag": "self_reliance",
+          "next_question": "q2"
+        },
+        {
+          "id": "q1_b",
+          "text_en": "Ask for an official voice note",
+          "text_vi": "Yêu cầu sếp gửi tin nhắn thoại",
+          "trait_tag": "information_first",
+          "next_question": "q2"
+        },
+        {
+          "id": "q1_c",
+          "text_en": "Call the boss's old phone number",
+          "text_vi": "Gọi vào số điện thoại cũ của sếp",
+          "trait_tag": "risk_recognition",
+          "next_question": "q2"
+        },
+        {
+          "id": "q1_d",
+          "text_en": "Contact the office accountant first",
+          "text_vi": "Liên hệ với kế toán công ty trước",
+          "trait_tag": "immediate_action",
+          "next_question": "q2"
+        }
       ]
     },
     {
       "id": "q2",
-      "text_en": "The profile sends a photo of a bank transfer slip showing they already sent money to [Name], but it's 'pending due to interbank delay.'",
+      "text_en": "The profile sends a photo of a bank transfer slip—they already sent money to [Name], but it's 'pending due to interbank delay.'",
       "text_vi": "Tài khoản gửi ảnh chụp biên lai chuyển tiền cho [Name], nhưng báo là 'đang chờ vì khác ngân hàng'.",
       "timer": 15,
       "options": [
-        { "id": "q2_a", "text_en": "Trust the photo and proceed", "text_vi": "Tin vào ảnh chụp và chuyển tiền", "trait_tag": "self_reliance", "next_question": "q3" },
-        { "id": "q2_b", "text_en": "Check for signs of photo editing", "text_vi": "Kiểm tra dấu hiệu chỉnh sửa ảnh", "trait_tag": "information_first", "next_question": "q3" },
-        { "id": "q2_c", "text_en": "Wait for the balance to update", "text_vi": "Chờ số dư tài khoản thực sự thay đổi", "trait_tag": "risk_recognition", "next_question": "q3" },
-        { "id": "q2_d", "text_en": "Ask the boss to call directly", "text_vi": "Yêu cầu sếp gọi điện trực tiếp", "trait_tag": "immediate_action", "next_question": "q3" }
+        {
+          "id": "q2_a",
+          "text_en": "Trust the photo and proceed",
+          "text_vi": "Tin vào ảnh chụp và chuyển tiền",
+          "trait_tag": "self_reliance",
+          "next_question": "q3"
+        },
+        {
+          "id": "q2_b",
+          "text_en": "Check for signs of photo editing",
+          "text_vi": "Kiểm tra dấu hiệu chỉnh sửa ảnh",
+          "trait_tag": "information_first",
+          "next_question": "q3"
+        },
+        {
+          "id": "q2_c",
+          "text_en": "Wait for the balance to update",
+          "text_vi": "Chờ số dư tài khoản thực sự thay đổi",
+          "trait_tag": "risk_recognition",
+          "next_question": "q3"
+        },
+        {
+          "id": "q2_d",
+          "text_en": "Ask the boss to call directly",
+          "text_vi": "Yêu cầu sếp gọi điện trực tiếp",
+          "trait_tag": "immediate_action",
+          "next_question": "q3"
+        }
       ]
     },
     {
@@ -38,10 +86,34 @@
       "text_vi": "Tin nhắn thứ hai từ 'Cô ruột' báo em trai [Name] bị bắt vì tai nạn giao thông, cần tiền bảo lãnh gấp.",
       "timer": 15,
       "options": [
-        { "id": "q3_a", "text_en": "Call the brother directly now", "text_vi": "Gọi trực tiếp cho em trai ngay", "trait_tag": "risk_recognition", "next_question": "q4a" },
-        { "id": "q3_b", "text_en": "Send the bail money immediately", "text_vi": "Chuyển tiền bảo lãnh ngay lập tức", "trait_tag": "self_reliance", "next_question": "q4b" },
-        { "id": "q3_c", "text_en": "Ask which police station he is at", "text_vi": "Hỏi xem em trai đang ở đồn công an nào", "trait_tag": "information_first", "next_question": "q4a" },
-        { "id": "q3_d", "text_en": "Notify your parents about the news", "text_vi": "Báo tin này cho bố mẹ biết", "trait_tag": "immediate_action", "next_question": "q4b" }
+        {
+          "id": "q3_a",
+          "text_en": "Call the brother directly now",
+          "text_vi": "Gọi trực tiếp cho em trai ngay",
+          "trait_tag": "risk_recognition",
+          "next_question": "q4a"
+        },
+        {
+          "id": "q3_b",
+          "text_en": "Send the bail money immediately",
+          "text_vi": "Chuyển tiền bảo lãnh ngay lập tức",
+          "trait_tag": "self_reliance",
+          "next_question": "q4b"
+        },
+        {
+          "id": "q3_c",
+          "text_en": "Ask which police station he is at",
+          "text_vi": "Hỏi xem em trai đang ở đồn công an nào",
+          "trait_tag": "information_first",
+          "next_question": "q4a"
+        },
+        {
+          "id": "q3_d",
+          "text_en": "Notify your parents about the news",
+          "text_vi": "Báo tin này cho bố mẹ biết",
+          "trait_tag": "immediate_action",
+          "next_question": "q4b"
+        }
       ]
     },
     {
@@ -50,10 +122,34 @@
       "text_vi": "Em trai nhấc máy; vẫn đang làm việc bình thường. [Name] nhận ra cả sếp và cô đều là giả mạo bằng AI.",
       "timer": 15,
       "options": [
-        { "id": "q4a_a", "text_en": "Report and block both accounts", "text_vi": "Báo cáo và chặn cả hai tài khoản", "trait_tag": "risk_recognition", "next_question": "q5" },
-        { "id": "q4a_b", "text_en": "Warn other relatives and colleagues", "text_vi": "Cảnh báo người thân và đồng nghiệp", "trait_tag": "immediate_action", "next_question": "q5" },
-        { "id": "q4a_c", "text_en": "Save the chat logs for police", "text_vi": "Lưu lại bằng chứng cho công an", "trait_tag": "information_first", "next_question": "q5" },
-        { "id": "q4a_d", "text_en": "Insult the scammer in the chat", "text_vi": "Chửi bới kẻ lừa đảo trong khung chat", "trait_tag": "self_reliance", "next_question": "q5" }
+        {
+          "id": "q4a_a",
+          "text_en": "Report and block both accounts",
+          "text_vi": "Báo cáo và chặn cả hai tài khoản",
+          "trait_tag": "risk_recognition",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4a_b",
+          "text_en": "Warn other relatives and colleagues",
+          "text_vi": "Cảnh báo người thân và đồng nghiệp",
+          "trait_tag": "immediate_action",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4a_c",
+          "text_en": "Save the chat logs for police",
+          "text_vi": "Lưu lại bằng chứng cho công an",
+          "trait_tag": "information_first",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4a_d",
+          "text_en": "Insult the scammer in the chat",
+          "text_vi": "Chửi bới kẻ lừa đảo trong khung chat",
+          "trait_tag": "self_reliance",
+          "next_question": "q5"
+        }
       ]
     },
     {
@@ -62,10 +158,34 @@
       "text_vi": "Tiền đã gửi. Vài phút sau, tài khoản 'Cô' bị xóa. [Name] gọi cho cô thật thì cô không biết gì cả.",
       "timer": 12,
       "options": [
-        { "id": "q4b_a", "text_en": "Contact the bank to freeze transfer", "text_vi": "Liên hệ ngân hàng để phong tỏa", "trait_tag": "risk_recognition", "next_question": "q5" },
-        { "id": "q4b_b", "text_en": "Report to the local cyber-police", "text_vi": "Báo cáo cho công an mạng", "trait_tag": "immediate_action", "next_question": "q5" },
-        { "id": "q4b_c", "text_en": "Check if your own data leaked", "text_vi": "Kiểm tra xem dữ liệu cá nhân bị lộ không", "trait_tag": "information_first", "next_question": "q5" },
-        { "id": "q4b_d", "text_en": "Keep the secret out of shame", "text_vi": "Giữ bí mật vì thấy xấu hổ", "trait_tag": "self_reliance", "next_question": "q5" }
+        {
+          "id": "q4b_a",
+          "text_en": "Contact the bank to freeze transfer",
+          "text_vi": "Liên hệ ngân hàng để phong tỏa",
+          "trait_tag": "risk_recognition",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4b_b",
+          "text_en": "Report to the local cyber-police",
+          "text_vi": "Báo cáo cho công an mạng",
+          "trait_tag": "immediate_action",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4b_c",
+          "text_en": "Check if your own data leaked",
+          "text_vi": "Kiểm tra xem dữ liệu cá nhân bị lộ không",
+          "trait_tag": "information_first",
+          "next_question": "q5"
+        },
+        {
+          "id": "q4b_d",
+          "text_en": "Keep the secret out of shame",
+          "text_vi": "Giữ bí mật vì thấy xấu hổ",
+          "trait_tag": "self_reliance",
+          "next_question": "q5"
+        }
       ]
     },
     {
@@ -74,10 +194,34 @@
       "text_vi": "Chuyên gia cảnh báo tin tặc đang quét mạng xã hội để vẽ sơ đồ gia đình miền Bắc cho các vụ lừa đảo.",
       "timer": 15,
       "options": [
-        { "id": "q5_a", "text_en": "Set social media to private", "text_vi": "Chuyển mạng xã hội sang chế độ riêng tư", "trait_tag": "risk_recognition", "next_question": "q6" },
-        { "id": "q5_b", "text_en": "Delete public lists of relatives", "text_vi": "Xóa danh sách người thân công khai", "trait_tag": "immediate_action", "next_question": "q6" },
-        { "id": "q5_c", "text_en": "Audit your app privacy settings", "text_vi": "Kiểm tra cài đặt quyền riêng tư", "trait_tag": "information_first", "next_question": "q6" },
-        { "id": "q5_d", "text_en": "Stop posting workplace location tags", "text_vi": "Ngừng gắn thẻ vị trí nơi làm việc", "trait_tag": "self_reliance", "next_question": "q6" }
+        {
+          "id": "q5_a",
+          "text_en": "Set social media to private",
+          "text_vi": "Chuyển mạng xã hội sang chế độ riêng tư",
+          "trait_tag": "risk_recognition",
+          "next_question": "q6"
+        },
+        {
+          "id": "q5_b",
+          "text_en": "Delete public lists of relatives",
+          "text_vi": "Xóa danh sách người thân công khai",
+          "trait_tag": "immediate_action",
+          "next_question": "q6"
+        },
+        {
+          "id": "q5_c",
+          "text_en": "Audit your app privacy settings",
+          "text_vi": "Kiểm tra cài đặt quyền riêng tư",
+          "trait_tag": "information_first",
+          "next_question": "q6"
+        },
+        {
+          "id": "q5_d",
+          "text_en": "Stop posting workplace location tags",
+          "text_vi": "Ngừng gắn thẻ vị trí nơi làm việc",
+          "trait_tag": "self_reliance",
+          "next_question": "q6"
+        }
       ]
     },
     {
@@ -86,10 +230,34 @@
       "text_vi": "Sếp thật yêu cầu cả nhóm đặt 'mật khẩu gia đình' cho các yêu cầu tiền khẩn cấp. Mọi người vẫn lo lắng.",
       "timer": 15,
       "options": [
-        { "id": "q6_a", "text_en": "Agree and set a secret keyword", "text_vi": "Đồng ý và đặt một từ khóa bí mật", "trait_tag": "risk_recognition", "next_question": "q7a" },
-        { "id": "q6_b", "text_en": "Suggest using 2FA for all Zalo", "text_vi": "Đề xuất bật 2FA cho mọi tài khoản Zalo", "trait_tag": "information_first", "next_question": "q7a" },
-        { "id": "q6_c", "text_en": "Ignore it; lightning won't strike twice", "text_vi": "Bỏ qua; sét không đánh hai lần một chỗ", "trait_tag": "self_reliance", "next_question": "q7b" },
-        { "id": "q6_d", "text_en": "Limit work discussion to secure apps", "text_vi": "Chỉ bàn việc trên ứng dụng bảo mật", "trait_tag": "immediate_action", "next_question": "q7b" }
+        {
+          "id": "q6_a",
+          "text_en": "Agree and set a secret keyword",
+          "text_vi": "Đồng ý và đặt một từ khóa bí mật",
+          "trait_tag": "risk_recognition",
+          "next_question": "q7a"
+        },
+        {
+          "id": "q6_b",
+          "text_en": "Suggest using 2FA for all Zalo",
+          "text_vi": "Đề xuất bật 2FA cho mọi tài khoản Zalo",
+          "trait_tag": "information_first",
+          "next_question": "q7a"
+        },
+        {
+          "id": "q6_c",
+          "text_en": "Ignore it; lightning won't strike twice",
+          "text_vi": "Bỏ qua; sét không đánh hai lần một chỗ",
+          "trait_tag": "self_reliance",
+          "next_question": "q7b"
+        },
+        {
+          "id": "q6_d",
+          "text_en": "Limit work discussion to secure apps",
+          "text_vi": "Chỉ bàn việc trên ứng dụng bảo mật",
+          "trait_tag": "immediate_action",
+          "next_question": "q7b"
+        }
       ]
     },
     {
@@ -98,10 +266,34 @@
       "text_vi": "[Name] bảo vệ được vòng kết nối. Cả nhóm giờ đã cảnh giác cao độ với các thủ đoạn giả mạo và thao túng.",
       "timer": 20,
       "options": [
-        { "id": "q7a_a", "text_en": "Educate elderly parents on AI", "text_vi": "Hướng dẫn cha mẹ già về công nghệ AI", "trait_tag": "immediate_action", "next_question": null },
-        { "id": "q7a_b", "text_en": "Report the incident to VNCERT", "text_vi": "Báo cáo vụ việc cho VNCERT", "trait_tag": "information_first", "next_question": null },
-        { "id": "q7a_c", "text_en": "Enable biometric login for banks", "text_vi": "Bật đăng nhập sinh trắc học ngân hàng", "trait_tag": "risk_recognition", "next_question": null },
-        { "id": "q7a_d", "text_en": "Stay alert but remain helpful", "text_vi": "Giữ cảnh giác nhưng vẫn sẵn lòng giúp đỡ", "trait_tag": "self_reliance", "next_question": null }
+        {
+          "id": "q7a_a",
+          "text_en": "Educate elderly parents on AI",
+          "text_vi": "Hướng dẫn cha mẹ già về công nghệ AI",
+          "trait_tag": "immediate_action",
+          "next_question": null
+        },
+        {
+          "id": "q7a_b",
+          "text_en": "Report the incident to VNCERT",
+          "text_vi": "Báo cáo vụ việc cho VNCERT",
+          "trait_tag": "information_first",
+          "next_question": null
+        },
+        {
+          "id": "q7a_c",
+          "text_en": "Enable biometric login for banks",
+          "text_vi": "Bật đăng nhập sinh trắc học ngân hàng",
+          "trait_tag": "risk_recognition",
+          "next_question": null
+        },
+        {
+          "id": "q7a_d",
+          "text_en": "Stay alert but remain helpful",
+          "text_vi": "Giữ cảnh giác nhưng vẫn sẵn lòng giúp đỡ",
+          "trait_tag": "self_reliance",
+          "next_question": null
+        }
       ]
     },
     {
@@ -110,10 +302,34 @@
       "text_vi": "[Name] vẫn là mục tiêu vì cài đặt bảo mật lỏng lẻo. Vệ sinh số là nỗ lực liên tục, không phải nhất thời.",
       "timer": 20,
       "options": [
-        { "id": "q7b_a", "text_en": "Re-evaluate privacy every month", "text_vi": "Đánh giá lại quyền riêng tư hàng tháng", "trait_tag": "risk_recognition", "next_question": null },
-        { "id": "q7b_b", "text_en": "Watch for new phishing methods", "text_vi": "Theo dõi các phương thức lừa đảo mới", "trait_tag": "information_first", "next_question": null },
-        { "id": "q7b_c", "text_en": "Use stronger passwords for apps", "text_vi": "Sử dụng mật khẩu mạnh cho ứng dụng", "trait_tag": "self_reliance", "next_question": null },
-        { "id": "q7b_d", "text_en": "Clean up friend lists regularly", "text_vi": "Lọc danh sách bạn bè thường xuyên", "trait_tag": "immediate_action", "next_question": null }
+        {
+          "id": "q7b_a",
+          "text_en": "Re-evaluate privacy every month",
+          "text_vi": "Đánh giá lại quyền riêng tư hàng tháng",
+          "trait_tag": "risk_recognition",
+          "next_question": null
+        },
+        {
+          "id": "q7b_b",
+          "text_en": "Watch for new phishing methods",
+          "text_vi": "Theo dõi các phương thức lừa đảo mới",
+          "trait_tag": "information_first",
+          "next_question": null
+        },
+        {
+          "id": "q7b_c",
+          "text_en": "Use stronger passwords for apps",
+          "text_vi": "Sử dụng mật khẩu mạnh cho ứng dụng",
+          "trait_tag": "self_reliance",
+          "next_question": null
+        },
+        {
+          "id": "q7b_d",
+          "text_en": "Clean up friend lists regularly",
+          "text_vi": "Lọc danh sách bạn bè thường xuyên",
+          "trait_tag": "immediate_action",
+          "next_question": null
+        }
       ]
     }
   ],
